SCTK Version 2.3.6 - Release February 26, 2009
  [*] Fixed install and makefile.

SCTK Version 2.3.5 - Release February 26, 2009
  [*] Fixed slatreport makefile behavior.

SCTK Version 2.3.4 - Release February 24, 2009
  [/] Added SLAT report computation and doc updates.

SCTK Version 2.3.3 - Release February 20, 2009
  [+] Added SLAT report and handling by asclite.

SCTK Version 2.3.2 - Release January 12, 2009
  [/] Changed BZip2 to LZMA.

SCTK Version 2.3.1 - Release January 6, 2009
  [/] Changed miniLZO to BZip2.

SCTK Version 2.3 - Release September 5, 2008
  [+] Code optimization.
  [+] Added label and category information in asclite SGML for STM files. 

SCTK Version 2.3-rc2c - Release May 8, 2008
  [+] Check if the character " is not in a RTTM file.
  [/] Changed the sclite compilation flags.

SCTK Version 2.3-rc2b - Release May 6, 2008
  [*] Fixed an asclite bug went more than 32768 segment are added to the structure.
  [/] Changed the asclite compilation flags.

SCTK Version 2.3-rc2 - Release November 26, 2007
  [*] Fixed the exit code, for a fatal error, it exists with a non 0 value.
  [/] Change the error/Info message when filtering.
  [+] Added information in the documentation for asclite regarding the 
      UEM filtering.

SCTK Version 2.3-rc1 - Release September 21, 2007
  [*] Fixed asclite when no input given
  [*] Fixed mapsswe segmentation code 
  [+] Added UEM inplementation directly to asclite
  [+] -wordalign-cost options for asclite adding some cost variance
      depending in the word syntactic distance
  [+] Added Time base cost model trigger with '-time-base-cost' in asclite
  [+] Generic/Rover full implementation in asclite
  [+] Added cumulative table to HTML reports
  [+] Added man and HTML docs for tools
  [/] Changed the speaker auto-overlap behavior from internal to command-
      line options for asclite
  [/] Inter Segment Gaps by default for every file type in asclite
  [/] Update headers disclaimer and file format