@@ -1,6 +1,6 @@
 File:  README
-Date:  February 27th, 2009
-SCTK Version: 2.3.6
+Date:  March 3rd, 2009
+SCTK Version: 2.3.7
 
 asclite compression algorithm update.
 
@@ -37,7 +37,7 @@ Linux Version 2.6.19.fc5                      2.2.0 - 2.2.4
 Linux Version 2.6.9-5.EL (gcc 3.4.6-3)        2.2.0 - 2.2.4
 Darwin Version 7.4.0                          1.3
 Darwin Version 8.5.0 (gcc v4.0.1 build 5367)  2.1.2 - 2.3-rc1 
-Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2 - 2.3.6
+Darwin Version 8.11.0 (gcc v4.0.1 build 5367) 2.3-rc2 - 2.3.7
 
  * compiled with warning messages, but successful self test
 ** compiled and ran, but test6, which uses GNU's diff for alignment fails.  The 
