@@ -10,6 +10,14 @@ all: slatreport.pl
 slatreport.pl: 
 	chmod +x slatreport.pl
 
+config:
+	@echo -n " Checking gnuplot... "
+	@if [ "`which gnuplot | egrep '^/'`" = "" ] ; then \
+		echo "not found"; \
+	else \
+		echo `which gnuplot`; \
+	fi
+
 check: all
 	@echo "Testing slatreport.pl"
 	./slatTest.pl
