@@ -9,46 +9,46 @@ Sample Processing Latency Begin Time Based (SPLb):
   Mean: 10.003
   Standard Deviation: 1.980
   Distribution:
-    key = 4.451, count = 11
-    key = 5.760, count = 57
-    key = 7.069, count = 262
-    key = 8.378, count = 598
-    key = 9.687, count = 1034
-    key = 10.997, count = 1133
-    key = 12.306, count = 818
-    key = 13.615, count = 429
-    key = 14.924, count = 113
-    key = 16.233, count = 31
+     3.142 -  4.451: 11
+     4.451 -  5.760: 57
+     5.760 -  7.069: 262
+     7.069 -  8.378: 598
+     8.378 -  9.687: 1034
+     9.687 - 10.997: 1133
+    10.997 - 12.306: 818
+    12.306 - 13.615: 429
+    13.615 - 14.924: 113
+    14.924 - 16.233: 31
 PNG: ../test_suite/slat.rttm.out.test.SPLbDistribution.10.png
 
 Sample Processing Latency Mid-point Time Based (SPLm):
   Mean: 9.886
-  Standard Deviation: 1.982
+  Standard Deviation: 1.981
   Distribution:
-    key = 4.374, count = 14
-    key = 5.675, count = 60
-    key = 6.977, count = 265
-    key = 8.278, count = 604
-    key = 9.580, count = 1009
-    key = 10.882, count = 1144
-    key = 12.183, count = 812
-    key = 13.485, count = 436
-    key = 14.786, count = 110
-    key = 16.088, count = 32
+     3.072 -  4.374: 14
+     4.374 -  5.675: 60
+     5.675 -  6.977: 265
+     6.977 -  8.278: 604
+     8.278 -  9.580: 1009
+     9.580 - 10.882: 1144
+    10.882 - 12.183: 812
+    12.183 - 13.485: 436
+    13.485 - 14.786: 110
+    14.786 - 16.088: 32
 PNG: ../test_suite/slat.rttm.out.test.SPLmDistribution.10.png
 
 Sample Processing Latency End Time Based (SPLe):
   Mean: 9.768
-  Standard Deviation: 1.986
+  Standard Deviation: 1.985
   Distribution:
-    key = 4.296, count = 16
-    key = 5.590, count = 58
-    key = 6.884, count = 268
-    key = 8.178, count = 613
-    key = 9.472, count = 1011
-    key = 10.767, count = 1124
-    key = 12.061, count = 813
-    key = 13.355, count = 436
-    key = 14.649, count = 114
-    key = 15.943, count = 33
+     3.002 -  4.296: 16
+     4.296 -  5.590: 58
+     5.590 -  6.884: 268
+     6.884 -  8.178: 613
+     8.178 -  9.472: 1011
+     9.472 - 10.767: 1124
+    10.767 - 12.061: 813
+    12.061 - 13.355: 436
+    13.355 - 14.649: 114
+    14.649 - 15.943: 33
 PNG: ../test_suite/slat.rttm.out.test.SPLeDistribution.10.png
