@@ -1,3 +1,6 @@
+SCTK Version 2.3.7 - Release March 3, 2009
+  [*] Revisite slatreport.
+
 SCTK Version 2.3.6 - Release February 26, 2009
   [*] Fixed install and makefile.
 
